change content for share

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.figme.co/">
     <meta property="og:image" content="http://www.figme.co/statics/images/screen.png">
-    <meta property="og:description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter.">
+    <meta property="og:description" content="Figme is a GIFs search engine.">
     <meta property="og:site_name" content="Figme">
 
     <meta itemprop="name" content="Figme | Search gifs using Giphy API">
