--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="//figme.co/statics/images/screen.png">
+    <meta name="twitter:image" content="http://www.figme.co/statics/images/screen.png">
 
     <meta property="og:title" content="Figme | Search gifs using Giphy API">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://www.figme.co/">
-    <meta property="og:image" content="//figme.co/statics/images/screen.png">
+    <meta property="og:image" content="http://www.figme.co/statics/images/screen.png">
     <meta property="og:description" content="Figme is a GIFs search engine.">
     <meta property="og:site_name" content="Figme">
     <meta property="og:image:width" content="640">
