move js/css to the component

--- a/src/elements/colors.html
+++ b/src/elements/colors.html
@@ -1,8 +1,22 @@
 <dom-module is="figme-colors">
 
-    <link rel="stylesheet" href="../styles/colors.css">
-
     <template>
+
+        <style>
+            :host {
+                max-width: 500px;
+                margin: 0 auto;
+                padding: 15px 0 0 0;
+                display: block;
+            }
+
+            .box {
+                float: left;
+                width: 10%;
+                height: 20px;
+                cursor: pointer;
+            }
+        </style>
 
         <template is="dom-repeat"
             items="{{ items }}">
@@ -16,6 +30,34 @@
 
     </template>
 
-    <script src="../scripts/colors.js"></script>
+    <script>
+        Polymer({
+            is: 'figme-colors',
+            properties: {
+                items: {
+                    type: Array,
+                    value: []
+                }
+            },
+            push: function(value) {
+                if (this.items.indexOf(value) === -1) {
+                    this.items.push(value);
+                    this.notifyPath('items', this.items.slice());
+                }
+            },
+            flush: function() {
+                this.set('items', []);
+            },
+            filter: function(e) {
+                var list = document.querySelector('figme-list');
+                if (list.color !== e.target.dataItem) {
+                    list.set('color', e.target.dataItem);
+                }
+            },
+            _computeColor: function(color) {
+                return 'background-color: ' + color;
+            }
+        });
+    </script>
 
 </dom-module>
