--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
     <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="http://www.figme.co/statics/images/screen.jpg">
+    <meta name="twitter:image" content="http://figme.co/statics/images/screen.jpg">
 
     <meta property="og:title" content="Figme | Search gifs using Giphy API" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.figme.co/" />
-    <meta property="og:image" content="http://www.figme.co/statics/images/screen.jpg" />
+    <meta property="og:url" content="http://figme.co/" />
+    <meta property="og:image" content="http://figme.co/statics/images/screen.jpg" />
     <meta property="og:description" content="Figme is a GIFs search engine." />
     <meta property="og:site_name" content="Figme" />
     <meta property="og:image:width" content="640">
@@ -23,7 +23,7 @@
 
     <meta itemprop="name" content="Figme | Search gifs using Giphy API">
     <meta itemprop="description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
-    <meta itemprop="image" content="http://www.figme.co/statics/images/screen.jpg">
+    <meta itemprop="image" content="http://figme.co/statics/images/screen.jpg">
 
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
@@ -31,7 +31,7 @@
     <script src="helpers/URIHash.js"></script>
 
     <link rel="stylesheet" href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/statics/styles/main.css" is="custom-style">
 
     <link rel="import" href="bower/polymer/polymer.html">
     <link rel="import" href="bower/paper-card/paper-card.html">
