--- a/src/elements/item.html
+++ b/src/elements/item.html
@@ -1,8 +1,92 @@
 <dom-module is="figme-item">
 
-    <link rel="stylesheet" href="../styles/item.css">
-
     <template>
+
+        <style>
+            :host {
+                float: left;
+                width: 25%;
+                margin-bottom: -5px;
+            }
+
+            @media (max-width:960px) {
+                :host {
+                    width: 50%;
+                };
+            }
+
+            @media (max-width:500px) {
+                :host {
+                    width: 100%;
+                };
+            }
+
+            paper-tooltip {
+                font-family: 'Roboto', 'Noto', sans-serif;
+                --paper-tooltip-background: black;
+            }
+
+            iron-image {
+                width: 100%;
+                height: 250px;
+            }
+
+            .item {
+                position: relative;
+                cursor: pointer;
+            }
+
+            .loading {
+                bottom: 10px;
+                position: absolute;
+                z-index: 1000;
+                margin-left: 10%;
+                width: 80%;
+                height: 10px;
+                border-radius: 50px;
+                background: #47A6F7;
+                -webkit-animation: right 0.3s infinite ease-in-out;
+                -moz-animation: right 0.3s infinite ease-in-out;
+                animation: right 0.3s infinite ease-in-out;
+                display: none;
+            }
+
+            @-webkit-keyframes right {
+              0%   { -webkit-transform: translate(-15px);   }
+              50%  { -webkit-transform: translate(15px);    }
+              100% { -webkit-transform: translate(-15px);   }
+            }
+
+            @-webkit-keyframes left {
+              0%   { -webkit-transform: translate(15px);    }
+              50%  { -webkit-transform: translate(-15px);   }
+              100% { -webkit-transform: translate(15px);    }
+            }
+
+            @-moz-keyframes right {
+              0%   { -moz-transform: translate(-15px);   }
+              50%  { -moz-transform: translate(15px);    }
+              100% { -moz-transform: translate(-15px);   }
+            }
+
+            @-moz-keyframes left {
+              0%   { -moz-transform: translate(15px);    }
+              50%  { -moz-transform: translate(-15px);   }
+              100% { -moz-transform: translate(15px);    }
+            }
+
+            @keyframes right {
+              0%   { transform: translate(-15px);  }
+              50%  { transform: translate(15px);   }
+              100% { transform: translate(-15px);  }
+            }
+
+            @keyframes left {
+              0%   { transform: translate(15px);   }
+              50%  { transform: translate(-15px);  }
+              100% { transform: translate(15px);   }
+            }
+        </style>
 
         <div class="item">
 
@@ -20,6 +104,68 @@
 
     </template>
 
-    <script src="../scripts/item.js"></script>
+    <script>
+        Polymer({
+            is: 'figme-item',
+            properties: {
+                item: Object
+            },
+            ready: function() {
+                this.item.markdown = '![Generated with Figme.co]('+this.item.images.original.url+')';
+                this._attachWatchers();
+                this._extractColor();
+            },
+            _attachWatchers: function() {
+                var element = this.querySelector('.item');
+                var view = this.querySelector('figme-item-view');
+                var loading = element.querySelector('.loading');
+                var timer;
+
+                element.addEventListener('mouseover', function(event) {
+                    if ( view.querySelector('iron-image').loaded ) {
+                        view.show();
+                        return;
+                    }
+                    loading.style.display = 'block';
+                    timer = setInterval(function(){
+                        if ( view.querySelector('iron-image').loaded ) {
+                            loading.style.display = 'none';
+                            view.show();
+                            clearInterval(timer);
+                        }
+                    }, 150);
+                });
+
+                element.addEventListener('mouseout', function(event) {
+                    view.hide();
+                    loading.style.display = 'none';
+                    clearInterval(timer);
+                });
+            },
+            _extractColor: function() {
+                if (!this.item.color) {
+                    var colors = document.querySelector('figme-colors');
+                    var image = document.createElement('img');
+                    image.onload = function(){
+                        var color = new ColorThief();
+                        var value = color.getColor(image);
+                        var hex = this._rgbToHex(value[0], value[1], value[2]);
+                        colors.push(hex);
+                        this.item.color = hex;
+                        image = null;
+                    }.bind(this);
+                    image.crossOrigin = 'Anonymous';
+                    image.src = this.item.images.original_still.url;
+                }
+            },
+            _rgbToHex: function(r, g, b) {
+                var componentToHex = function(c) {
+                    var hex = c.toString(16);
+                    return hex.length == 1 ? '0' + hex : hex;
+                };
+                return '#' + componentToHex(r) + componentToHex(g) + componentToHex(b);
+            }
+        });
+    </script>
 
 </dom-module>
