--- a/src/elements/view.html
+++ b/src/elements/view.html
@@ -1,14 +1,30 @@
 <dom-module is="figme-item-view">
 
-    <link rel="stylesheet" href="../styles/view.css">
-
-    <style>
-        paper-tooltip {
-            --paper-tooltip-background: #47A6F7;
-        }
-    </style>
-
     <template>
+
+        <style>
+            .view {
+                position: absolute;
+                z-index: 1000;
+                top: 0;
+                width: 100%;
+                background-color: rgba(0, 0, 0, 0.9);
+            }
+
+            .view ._actions {
+                margin-top: -5px;
+                color: #fff;
+            }
+
+            .view iron-image {
+                width: 100%;
+                height: 250px;
+            }
+
+            paper-tooltip {
+                --paper-tooltip-background: #47A6F7;
+            }
+        </style>
 
         <div class="view" hidden$="{{ !isShown }}">
 
@@ -33,6 +49,34 @@
 
     </template>
 
-    <script src="../scripts/view.js"></script>
+    <script>
+        Polymer({
+            is: 'figme-item-view',
+            properties: {
+                item: Object,
+                isShown: {
+                    type: Boolean,
+                    value: false
+                }
+            },
+            show: function() {
+                this.isShown = true;
+                ga('send', 'event', 'Preview', 'show', this.item.id);
+            },
+            hide: function() {
+                this.isShown = false;
+            },
+            download: function() {
+                var link = document.createElement('a');
+                link.download = null;
+                link.href = this.item.images.original.url;
+                link.click();
+                ga('send', 'event', 'Copy', 'Download', this.item.id);
+            },
+            copy: function() {
+                this.querySelector('#content-copy').click();
+            }
+        });
+    </script>
 
 </dom-module>
