--- a/src/elements/app.html
+++ b/src/elements/app.html
@@ -3,7 +3,7 @@
     <template>
 
         <style>
-            .search-container {
+            .search-box {
                 max-width: 500px;
                 margin: 30px auto;
             }
@@ -70,7 +70,7 @@
             }
         </style>
 
-        <div class="search-container">
+        <div class="search-box">
 
             <input id="search"
                 type="search"
@@ -82,7 +82,7 @@
 
             <p>
                 <span class="links">
-                    <iron-icon icon="icons:code"></iron-icon> with <iron-icon icon="icons:favorite"></iron-icon> by
+                    <a href="https://github.com/maxigimenez/figme" target="_blank"><iron-icon icon="icons:code"></iron-icon></a> with <iron-icon icon="icons:favorite"></iron-icon> by
                     <a href="http://maxigimenez.github.io/" target="_blank">@maxigimenez</a>
                 </span>
                 <a href="http://giphy.com/" target="_blank" class="giphy"></a>
