--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,28 @@
 <html itemscope itemtype="http://schema.org/Article">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Figme | Search gifs</title>
+    <title>Figme | GIFs search engine using Giphy API</title>
     <meta name="description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter." />
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@gmaxi_">
-    <meta name="twitter:title" content="Figme | Search gifs using Giphy API">
+    <meta name="twitter:title" content="Figme | GIFs search engine using Giphy API">
     <meta name="twitter:description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta name="twitter:creator" content="@gmaxi_">
-    <meta name="twitter:image" content="http://figme.co/statics/images/screen.jpg">
+    <meta name="twitter:image" content="http://www.figme.co/statics/images/screen.jpg">
 
-    <meta property="og:title" content="Figme | Search gifs using Giphy API" />
+    <meta property="og:title" content="Figme | GIFs search engine using Giphy API" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://figme.co/" />
-    <meta property="og:image" content="http://figme.co/statics/images/screen.jpg" />
+    <meta property="og:image" content="http://www.figme.co/statics/images/screen.jpg" />
     <meta property="og:description" content="Figme is a GIFs search engine." />
     <meta property="og:site_name" content="Figme" />
     <meta property="og:image:width" content="640">
     <meta property="og:image:height" content="355">
 
-    <meta itemprop="name" content="Figme | Search gifs using Giphy API">
+    <meta itemprop="name" content="Figme | GIFs search engine using Giphy API">
     <meta itemprop="description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
-    <meta itemprop="image" content="http://figme.co/statics/images/screen.jpg">
+    <meta itemprop="image" content="http://www.figme.co/statics/images/screen.jpg">
 
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
