--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <script src="helpers/URIHash.js"></script>
 
     <link rel="stylesheet" href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
-    <link rel="stylesheet" href="/statics/styles/main.css" is="custom-style">
+    <link rel="stylesheet" href="statics/styles/main.css" is="custom-style">
 
     <link rel="import" href="bower/polymer/polymer.html">
     <link rel="import" href="bower/paper-card/paper-card.html">
