Copy to clipboard fallback, some SEO improvements

--- a/src/elements/app.html
+++ b/src/elements/app.html
@@ -18,6 +18,7 @@
                 color: #000;
                 padding: 20px;
                 font-size: 20px;
+                -webkit-appearance: textfield;
             }
 
             input::-webkit-search-cancel-button {
