--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Figme | GIFs search engine using Giphy API</title>
-    <meta name="description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter." />
+    <meta name="description" content="Figme is a gif search engine with the ability of copy to the clipboard on several formats, also recognize the main color of the gif to be used as filter." />
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@gmaxi_">
@@ -24,6 +24,8 @@
     <meta itemprop="name" content="Figme | GIFs search engine using Giphy API">
     <meta itemprop="description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta itemprop="image" content="http://www.figme.co/statics/images/screen.jpg">
+
+    <link rel="canonical" href="http://figme.co/" />
 
     <script src="bower/webcomponentsjs/webcomponents-lite.min.js"></script>
     <script src="bower/clipboard/dist/clipboard.min.js"></script>
