--- a/src/elements/view.html
+++ b/src/elements/view.html
@@ -24,9 +24,37 @@
             paper-tooltip {
                 --paper-tooltip-background: #47A6F7;
             }
+
+            .fallback {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.3);
+                z-index: 1000000;
+                text-align: center;
+                pointer-events: none;
+            }
+
+            input {
+                width: 80%;
+                margin-top: 120px;
+                padding: 5px;
+                -webkit-appearance: textfield;
+                outline: 0;
+                pointer-events: none;
+            }
         </style>
 
         <div class="view" hidden$="{{ !isShown }}">
+
+            <div class="fallback" hidden$="{{ fallbackHidden }}">
+                <input id="fallback_input"
+                    type="search"
+                    is="iron-input"
+                    bind-value="{{ fallback }}"
+                    autocomplete="off"
+                    placeholder="Fallback for crappy browsers" />
+            </div>
 
             <iron-image
                 preload
@@ -57,6 +85,11 @@
                 isShown: {
                     type: Boolean,
                     value: false
+                },
+                fallback: String,
+                fallbackHidden: {
+                    type: Boolean,
+                    value: true
                 }
             },
             show: function() {
@@ -65,6 +98,7 @@
             },
             hide: function() {
                 this.isShown = false;
+                this.fallbackHidden = true;
             },
             download: function() {
                 var link = document.createElement('a');
