--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html itemscope="" itemtype="http://schema.org/Article"><head><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Figme | GIFs search engine using Giphy API</title>
-    <meta name="description" content="Figme is a gif search engine with the ability of copy quickly to the clipboard the URL and a text with markdown format, also recognize the main color of the gif to be used as filter.">
+    <meta name="description" content="Figme is a gif search engine with the ability of copy to the clipboard on several formats, also recognize the main color of the gif to be used as filter.">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@gmaxi_">
@@ -22,6 +22,8 @@
     <meta itemprop="name" content="Figme | GIFs search engine using Giphy API">
     <meta itemprop="description" content="Figme is a search engine with the ability of recognize the main color of the gif to get what you are looking for.">
     <meta itemprop="image" content="http://www.figme.co/statics/images/screen.jpg">
+
+    <link rel="canonical" href="http://figme.co/">
 
     <script>/**
  * @license
@@ -10413,7 +10415,7 @@ Examples:
 		});
 	};
 
-	
+
   return Promise;
 }
 
@@ -11047,7 +11049,7 @@ element.
        *
        * The type of the response is determined by the value of `handleAs` at
        * the time that the request was generated.
-       * 
+       *
        * @type {Object}
        */
       lastResponse: {
@@ -11058,7 +11060,7 @@ element.
 
       /**
        * lastRequest's error, if any.
-       * 
+       *
        * @type {Object}
        */
       lastError: {
@@ -11697,7 +11699,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
       }
 
     },
-    
+
     attached: function() {
       this.style.display = 'none';
     },
@@ -12856,7 +12858,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
         cursor: pointer;
         z-index: 0;
         line-height: 1;
-        
+
         width: 40px;
         height: 40px;
 
@@ -14086,6 +14088,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
                 color: #000;
                 padding: 20px;
                 font-size: 20px;
+                -webkit-appearance: textfield;
             }
 
             input::-webkit-search-cancel-button {
@@ -14383,7 +14386,14 @@ is separate from validation, and `allowed-pattern` does not affect how the input
                 })
                 .on('success', function() {
                     this.$.copied.show();
-                }.bind(this));
+                }.bind(this))
+                .on('error', function(e) {
+                    var view = e.trigger.parentElement.parentElement.parentElement;
+                    var item = view.item;
+                    view.fallbackHidden = false;
+                    view.fallback = (e.trigger.id === 'code' ? item.markdown : item.images.original.url);
+                    view.$.fallback_input.focus();
+                });
             }
         });
     </script>
@@ -14508,7 +14518,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
                 var loading = element.querySelector('.loading');
                 var timer;
 
-                element.addEventListener('mouseover', function(event) {
+                element.addEventListener('mouseover', function() {
                     if ( view.querySelector('iron-image').loaded ) {
                         view.show();
                         return;
@@ -14523,7 +14533,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
                     }, 150);
                 });
 
-                element.addEventListener('mouseout', function(event) {
+                element.addEventListener('mouseout', function() {
                     view.hide();
                     loading.style.display = 'none';
                     clearInterval(timer);
@@ -14582,9 +14592,32 @@ is separate from validation, and `allowed-pattern` does not affect how the input
             paper-tooltip {
                 --paper-tooltip-background: #47A6F7;
             }
+
+            .fallback {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.3);
+                z-index: 1000000;
+                text-align: center;
+                pointer-events: none;
+            }
+
+            input {
+                width: 80%;
+                margin-top: 120px;
+                padding: 5px;
+                -webkit-appearance: textfield;
+                outline: 0;
+                pointer-events: none;
+            }
         </style>
 
         <div class="view" hidden$="{{ !isShown }}">
+
+            <div class="fallback" hidden$="{{ fallbackHidden }}">
+                <input id="fallback_input" type="search" is="iron-input" bind-value="{{ fallback }}" autocomplete="off" placeholder="Fallback for crappy browsers">
+            </div>
 
             <iron-image preload="" fade="" sizing="contain" src="{{ item.images.original.url }}" on-tap="copy"></iron-image>
 
@@ -14610,6 +14643,11 @@ is separate from validation, and `allowed-pattern` does not affect how the input
                 isShown: {
                     type: Boolean,
                     value: false
+                },
+                fallback: String,
+                fallbackHidden: {
+                    type: Boolean,
+                    value: true
                 }
             },
             show: function() {
@@ -14618,6 +14656,7 @@ is separate from validation, and `allowed-pattern` does not affect how the input
             },
             hide: function() {
                 this.isShown = false;
+                this.fallbackHidden = true;
             },
             download: function() {
                 var link = document.createElement('a');
